[package]
name = "jkcutils-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "jankincai <jankincai12@gmail.com>",
]
description = "Rust tools."
repository = "https://github.com/caizhengxin/jkcutils-rs"
homepage = "https://github.com/caizhengxin/jkcutils-rs"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "command-line-utilities",
]
keywords = [
    "jkcutils-rs",
]
license-file = "LICENSE"
include = [
    "src/*",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
overflow-checks = false

[dependencies]

[dev-dependencies]

# [build-dependencies]
# bindgen = "0.69"
